erDiagram
    USERS {
        int UserId PK
        string Username UK
        string PasswordHash
        string FullName
        string Role
        bool IsActive
        datetime CreatedAt
        datetime UpdatedAt
    }

    AREAS {
        int AreaId PK
        string AreaName UK
        int DisplayOrder
        bool IsActive
        datetime CreatedAt
        datetime UpdatedAt
    }

    DINING_TABLES {
        int TableId PK
        string TableName
        int AreaId FK "nullable"
        string Area "legacy/display area"
        string QrToken UK
        string Status "Available, Occupied, WaitingPayment"
        bool IsActive
        int DisplayOrder
        datetime CreatedAt
        datetime UpdatedAt
    }

    CATEGORIES {
        int CategoryId PK
        string CategoryName
        string Description
        int DisplayOrder
        bool IsActive
        datetime CreatedAt
        datetime UpdatedAt
    }

    MENU_ITEMS {
        int MenuItemId PK
        int CategoryId FK
        string Name
        string Description
        decimal BasePrice
        string ImageUrl
        bool IsAvailable
        bool IsDeleted
        bool IsOutOfStock
        int Stock "nullable; null means no stock tracking"
        datetime CreatedAt
        datetime UpdatedAt
    }

    CHOICE_GROUPS {
        int ChoiceGroupId PK
        string GroupName
        bool IsAvailable
        bool IsRequired
        int MaxSelectDefault
        datetime CreatedAt
        datetime UpdatedAt
    }

    CHOICE_ITEMS {
        int ChoiceItemId PK
        int ChoiceGroupId FK
        string ChoiceName
        decimal ExtraPrice
        bool IsAvailable
        datetime CreatedAt
        datetime UpdatedAt
    }

    MENU_ITEM_CHOICE_GROUPS {
        int MenuItemId PK, FK
        int ChoiceGroupId PK, FK
        int DisplayOrder
        int MaxSelect "nullable override"
        datetime CreatedAt
        datetime UpdatedAt
    }

    SALES_CHANNELS {
        int SalesChannelId PK
        string ChannelCode UK "unique when IsDeleted=false"
        string ChannelName
        bool IsActive
        bool IsDeleted
        datetime CreatedAt
        datetime UpdatedAt
    }

    MENU_ITEM_CHANNEL_PRICES {
        int MenuItemId PK, FK
        int SalesChannelId PK, FK
        decimal ChannelExtraPrice
        datetime CreatedAt
        datetime UpdatedAt
    }

    CHOICE_ITEM_CHANNEL_PRICES {
        int ChoiceItemId PK, FK
        int SalesChannelId PK, FK
        decimal ChannelExtraPrice
        datetime CreatedAt
        datetime UpdatedAt
    }

    TABLE_SESSIONS {
        int TableSessionId PK
        int TableId FK
        datetime StartedAt
        datetime EndedAt
        string Status "Browsing, Open, WaitingPayment, Closed, Cancelled"
        int OpenedBy FK "nullable"
        int ClosedBy FK "nullable"
    }

    TABLE_SESSION_CUSTOMERS {
        int SessionCustomerId PK
        int TableSessionId FK
        string ClientToken
        string DisplayName
        datetime CreatedAt
    }

    ORDERS {
        int OrderId PK
        int TableSessionId FK
        int SessionCustomerId FK "nullable for staff order"
        int SalesChannelId FK
        string OrderCode UK
        string OrderSource
        string ExternalOrderCode
        string ClientToken
        string Status
        string PrintStatus
        string CustomerNote
        string SystemNote
        string CancelReason
        datetime CreatedAt
        datetime UpdatedAt
        datetime CancelledAt
        datetime PrintedAt
        string PrintError
        int CreatedBy FK "nullable"
        int CancelledBy FK "nullable"
    }

    ORDER_ITEMS {
        int OrderItemId PK
        int OrderId FK
        int MenuItemId FK
        string MenuItemNameSnapshot
        decimal BasePriceSnapshot
        decimal ChannelExtraPriceSnapshot
        decimal FinalUnitPriceSnapshot
        int Quantity
        string Note
        datetime CreatedAt
        datetime UpdatedAt
    }

    ORDER_ITEM_SELECTED_CHOICES {
        int OrderItemSelectedChoiceId PK
        int OrderItemId FK
        int ChoiceGroupId FK
        int ChoiceItemId FK
        string GroupNameSnapshot
        string ChoiceNameSnapshot
        decimal ExtraPriceSnapshot
        decimal ChannelExtraPriceSnapshot
        decimal FinalExtraPriceSnapshot
        datetime CreatedAt
    }

    SERVICE_REQUESTS {
        int RequestId PK
        int TableSessionId FK
        int SessionCustomerId FK "nullable"
        string ClientToken
        string RequestType "CallStaff, PaymentRequest"
        string Reason
        string PaymentMethod
        string Message
        string Status
        datetime CreatedAt
        datetime ConfirmedAt
        int ConfirmedBy FK "nullable"
    }

    BILLS {
        int BillId PK
        string BillCode UK
        int TableSessionId FK
        int SalesChannelId FK
        string SalesChannelCodeSnapshot
        string SalesChannelNameSnapshot
        int BillNo
        string BillName
        bool IsDefault
        string Status "Unpaid, Paid, Cancelled"
        decimal SubTotal
        decimal DiscountAmount
        decimal FinalAmount
        datetime CreatedAt
        int CreatedBy FK "nullable"
        datetime PaidAt
        datetime CancelledAt
        int CancelledBy FK "nullable"
        string CancelReason
    }

    BILL_DETAILS {
        int BillDetailId PK
        int BillId FK
        int MenuItemId FK
        int SalesChannelId FK
        string ItemName
        string ChoiceSummary
        string Note
        int Quantity
        int NotifiedQuantity
        decimal BasePriceSnapshot
        decimal MenuItemChannelExtraPriceSnapshot
        decimal ChoiceExtraPriceSnapshot
        decimal UnitPrice
        decimal TotalPrice
        datetime CreatedAt
    }

    BILL_DETAIL_ADJUSTMENTS {
        int BillDetailAdjustmentId PK
        int BillId FK
        int BillDetailId FK
        int MenuItemId FK
        string ItemName
        int QuantityBefore
        int QuantityAfter
        int ChangedQuantity
        string ChangeType
        string Reason
        datetime CreatedAt
        int CreatedBy FK
    }

    PAYMENTS {
        int PaymentId PK
        int BillId FK
        string PaymentMethod
        decimal Amount
        datetime PaidAt
        int ConfirmedBy FK
        datetime UpdatedAt
        int UpdatedBy FK "nullable"
        string ChangeReason
    }

    USERS ||--o{ TABLE_SESSIONS : opens
    USERS ||--o{ TABLE_SESSIONS : closes
    USERS ||--o{ ORDERS : creates
    USERS ||--o{ ORDERS : cancels
    USERS ||--o{ SERVICE_REQUESTS : confirms
    USERS ||--o{ BILLS : creates
    USERS ||--o{ BILLS : cancels
    USERS ||--o{ BILL_DETAIL_ADJUSTMENTS : creates
    USERS ||--o{ PAYMENTS : confirms
    USERS ||--o{ PAYMENTS : updates

    AREAS ||--o{ DINING_TABLES : contains
    DINING_TABLES ||--o{ TABLE_SESSIONS : has

    CATEGORIES ||--o{ MENU_ITEMS : contains
    MENU_ITEMS ||--o{ MENU_ITEM_CHOICE_GROUPS : has
    CHOICE_GROUPS ||--o{ MENU_ITEM_CHOICE_GROUPS : assigned_to
    CHOICE_GROUPS ||--o{ CHOICE_ITEMS : contains

    SALES_CHANNELS ||--o{ MENU_ITEM_CHANNEL_PRICES : prices
    SALES_CHANNELS ||--o{ CHOICE_ITEM_CHANNEL_PRICES : prices
    SALES_CHANNELS ||--o{ ORDERS : source_for
    MENU_ITEMS ||--o{ MENU_ITEM_CHANNEL_PRICES : has
    CHOICE_ITEMS ||--o{ CHOICE_ITEM_CHANNEL_PRICES : has

    TABLE_SESSIONS ||--o{ TABLE_SESSION_CUSTOMERS : has
    TABLE_SESSIONS ||--o{ ORDERS : has
    TABLE_SESSION_CUSTOMERS ||--o{ ORDERS : places
    TABLE_SESSIONS ||--o{ SERVICE_REQUESTS : has
    TABLE_SESSION_CUSTOMERS ||--o{ SERVICE_REQUESTS : sends

    ORDERS ||--o{ ORDER_ITEMS : contains
    MENU_ITEMS ||--o{ ORDER_ITEMS : ordered_as
    ORDER_ITEMS ||--o{ ORDER_ITEM_SELECTED_CHOICES : has
    CHOICE_GROUPS ||--o{ ORDER_ITEM_SELECTED_CHOICES : selected_group
    CHOICE_ITEMS ||--o{ ORDER_ITEM_SELECTED_CHOICES : selected_choice

    TABLE_SESSIONS ||--o{ BILLS : has
    SALES_CHANNELS ||--o{ BILLS : channel_for
    BILLS ||--o{ BILL_DETAILS : contains
    MENU_ITEMS ||--o{ BILL_DETAILS : billed_item
    SALES_CHANNELS ||--o{ BILL_DETAILS : priced_by
    BILLS ||--o{ BILL_DETAIL_ADJUSTMENTS : records
    BILL_DETAILS ||--o{ BILL_DETAIL_ADJUSTMENTS : adjusted_detail
    MENU_ITEMS ||--o{ BILL_DETAIL_ADJUSTMENTS : adjusted_item
    BILLS ||--o{ PAYMENTS : paid_by
